<resources>
    <string name="app_name">AndroidApiApp</string>

    <!--  CreateDeviceId  -->
    <string name="create_device_id_already_created">端末ID 作成済</string>
    <string name="create_device_id_success">端末ID 作成 成功</string>
    <string name="create_device_id_dialog_network_error_title">ネットワークエラー</string>
    <string name="create_device_id_dialog_network_error_message">ネット環境の良い場所で起動してください</string>
    <string name="create_device_id_dialog_network_error_ok">OK</string>
    <string name="create_device_id_error_message">エラー：</string>

    <!--  一覧画面  -->
    <string name="todo_list_recycleViw_description">登録画面へ遷移</string>
    <string name="todo_list_floatingActionButton_description">Todo登録画面へ遷移</string>
    <string name="todo_list_sample_datetime">2025/9/22</string>
    <string name="todo_list_sample_title">タイトル</string>
    <string name="todo_list_sample_content">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</string>

    <!--  入力画面  -->
    <string name="todo_edit_title_label">タイトル</string>
    <string name="todo_edit_content_label">メモ</string>
    <string name="todo_edit_create_btn">登録</string>

    <!--  詳細画面  -->
    <string name="todo_detail_edit_btn">編集</string>
    <string name="todo_detail_delete_btn">削除</string>
    <string name="todo_detail_sample_datetime">2025/9/22</string>
    <string name="todo_detail_sample_title">タイトル</string>
    <string name="todo_detail_sample_content">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</string>

</resources>