<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/valid_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="366dp"
        android:layout_height="374dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142">

        <TextView
            android:id="@+id/todo_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_title"
            android:text="@string/todo_edit_title_label" />

        <EditText
            android:id="@+id/todo_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF59D"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/todo_memo_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_content"
            android:text="@string/todo_edit_content_label" />

        <EditText
            android:id="@+id/todo_input_memo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#FFF59D"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/todo_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_edit_create_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>